test/TestPhases/typechecker/invalid/assignToConst.blc
const tt = true

@[EntryPoint]
activity A ()()
    let loctt = true
    tt = false
    loctt = false
    await false
end